# SSDP

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
ssdp/: __init__.py
ssdp/configs/method_configs/: _base.py  _utils.py  neus.py  neus_facto.py  oav.py  oav_facto.py  ssdp.py  ssdp_facto.py
ssdp/engines/: __init__.py  custom_trainer.py
ssdp/fields/: __init__.py  oav.py  sdf.py  ssdp.py
ssdp/models/: __init__.py  neuralangelo_mixin.py  neus.py  neus_facto.py  neus_facto_angelo.py  surface_model_mixin.py
ssdp/renderers/: __init__.py  normal_estimator.py  phong_shader.py  shadow_renderer.py  sphere_tracer.py
ssdp/scripts/: train.py
ssdp/utils/: __init__.py  jaxtyping.py  logging.py
tools/dataset/dtu/: restore_image_size.py
tools/dataset/lego/: create_meta_data.py
tools/evaluation/: collect_metrics.py  evaluate_uq_metrics.py  postprocess_mesh.py  print_statistics.py  reconstruct_surface.py
tools/paper/: create_crossing_figure.py  create_overview_figure.py
tools/visualization/: render_field.py  render_mesh.py
